# TangleBrain

./: .gitignore  ARCHITECTURE.md  C1-BUILD-REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Makefile  README.md  TANGLEBRAIN.md  pyproject.toml
.claude/plans/: c2b-mcp-delegate.md  c6-paid-api-tier.md  tanglebrain.md
.claude/plans/archive/: c2-cli-adapters.md  c3-router.md  c3b-delegate-injection.md  c4-measurement.md  c5a-knob-gui.md  c5b-editable-pricing.md
.claude/priming/: builder.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add-backend.md  bug.md  feature.md
.github/workflows/: ci.yml
.tangleclaw/: project.json  session-prime.md
.tangleclaw/memories/: MEMORY.md
tanglebrain/: __init__.py  classifier.py  cli.py  delegate.py  mcp_server.py  measurement.py  roster.py  roster_edit.py  router.py  selector.py  settings.py
tanglebrain/adapters/: __init__.py  api.py  base.py  cli.py  openai_compat.py
tanglebrain/config/: pricing.yaml  roster.yaml  settings.yaml
tanglebrain/gui/: __init__.py  server.py  views.py
tanglebrain/gui/static/: index.html
tests/: __init__.py  test_api_adapter.py  test_classifier.py  test_cli.py  test_cli_adapter.py  test_delegate.py  test_gui.py  test_live.py  test_mcp_server.py  test_measurement.py  test_openai_compat.py  test_roster.py  test_roster_edit.py  test_router.py  test_selector.py  test_settings.py  test_version.py
