[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tanglebrain"
version = "0.9.0"
description = "A cost-tiered LLM router: free local first, flat-rate subscriptions next, paid API last."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jason Vaughan" }]
keywords = ["llm", "router", "ollama", "openai-compatible", "litellm", "cost-tiered"]

dependencies = [
    "httpx >= 0.27",
    "PyYAML >= 6.0",
]

# Optional: the MCP local-delegate server (C2b). Keeps the core install lean — only consumers
# that run `tanglebrain-delegate` (so an orchestrator CLI can offload grunt to local) need the
# MCP stack. Install with: pip install "tanglebrain[delegate]".
[project.optional-dependencies]
delegate = ["mcp >= 1.0"]

[project.urls]
Homepage = "https://github.com/Jason-Vaughan/TangleBrain"

[project.scripts]
tanglebrain = "tanglebrain.cli:main"
tanglebrain-delegate = "tanglebrain.mcp_server:main"
tanglebrain-gui = "tanglebrain.gui.server:main"

[tool.setuptools.packages.find]
include = ["tanglebrain*"]

[tool.setuptools.package-data]
tanglebrain = ["config/*.yaml"]
"tanglebrain.gui" = ["static/*.html"]
